--- a/base/mysql-server/files/etc/mysql/my.cnf
+++ b/base/mysql-server/files/etc/mysql/my.cnf
@@ -38,6 +38,7 @@ thread_cache_size              = 50
 open_files_limit               = 65535
 table_definition_cache         = 4096
 table_open_cache               = 4096
+group_concat_max_len           = 1048576
 
 # INNODB #
 innodb_flush_method            = O_DIRECT
