disable nginx open_file_cache for dev environment this fixes dangling .nfs files when running npm tasks

--- a/base/nginx/files/etc/nginx/nginx.conf
+++ b/base/nginx/files/etc/nginx/nginx.conf
@@ -44,10 +44,14 @@ http {
 	# File attributes cache
 	##
 
+{%- if 'dev' in grains.roles %}
+	open_file_cache off;
+{%- else %}
 	open_file_cache max=10000;
 	open_file_cache_valid 3s;
 	open_file_cache_min_uses 2;
 	open_file_cache_errors on;
+{%- endif %}
 
 	server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
