update for debian8

--- a/base/spryker/files/etc/php5/fpm/pool.d/yves.conf
+++ b/base/spryker/files/etc/php5/fpm/pool.d/yves.conf
@@ -32,4 +32,6 @@ php_admin_value[expose_php] = off
 {%- if environment == "production" %}
 php_admin_value[display_errors] = no
 {%- endif %}
+php_admin_value[error_log] = /data/logs/{{ environment }}/yves-php-errors.log
 php_admin_value[newrelic.appname] = "Yves({{ environment }})"
+php_admin_value[newrelic.framework] = "symfony2"
