--- a/base/spryker/files/etc/php5/fpm/pool.d/zed.conf
+++ b/base/spryker/files/etc/php5/fpm/pool.d/zed.conf
@@ -31,6 +31,7 @@ php_admin_value[memory_limit] = 2048M
 {%- if environment == "production" %}
 php_admin_value[display_errors] = no
 {%- endif %}
+php_admin_value[error_log] = /data/logs/{{ environment }}/yves-php-errors.log
 php_admin_value[newrelic.appname] = "Zed({{ environment }})"
-php_admin_value[newrelic.framework] = "zend"
+php_admin_value[newrelic.framework] = "symfony2"
 php_admin_value[max_execution_time] = 600
