--- a/base/mysql-server/files/etc/mysql/my.cnf
+++ b/base/mysql-server/files/etc/mysql/my.cnf
@@ -43,18 +43,19 @@ group_concat_max_len           = 1048576
 # INNODB #
 innodb_flush_method            = O_DIRECT
 innodb_log_files_in_group      = 2
-#innodb_log_file_size           = 256M
+innodb_log_file_size           = 256M
 innodb_flush_log_at_trx_commit = 2
 innodb_file_per_table          = 1
-innodb_buffer_pool_size        = 128M
+innodb_buffer_pool_size        = {{ salt['grains.get']('mysql:innodb_buffer_pool_size', "128M") }}
 
 # LOGGING #
-log_error                      = /var/log/mysql/error.log
 log_queries_not_using_indexes  = 0
 slow_query_log                 = 1
 slow_query_log_file            = /var/log/mysql/slow.log
-#general_log_file               = /var/log/mysql/mysql.log
-#general_log                    = 1
+
+# I18n
+character-set-server           = utf8
+collation-server               = utf8_general_ci
 
 [mysqldump]
 quick
