--- a/base/mysql-server/files/etc/mysql/my.cnf
+++ b/base/mysql-server/files/etc/mysql/my.cnf
@@ -57,6 +57,9 @@ slow_query_log_file            = /var/log/mysql/slow.log
 character-set-server           = utf8
 collation-server               = utf8_general_ci
 
+# server mode
+sql-mode                       = STRICT_ALL_TABLES
+
 [mysqldump]
 quick
 quote-names
