--- a/base/spryker/files/etc/nginx/sites-available/XX-yves.conf
+++ b/base/spryker/files/etc/nginx/sites-available/XX-yves.conf
@@ -17,7 +17,7 @@ server {
     auth_basic_user_file  {{ settings.environments[environment].stores[store].yves.htpasswd_file }};
 {%- endif %}
 
-    root /data/shop/{{ environment }}/current/static/public/Yves;
+    root /data/shop/{{ environment }}/current/public/Yves;
 
     set $application_env {{ environment }};
     set $application_store {{ store }};
