--- a/base/spryker/files/etc/nginx/sites-available/XX-zed.conf
+++ b/base/spryker/files/etc/nginx/sites-available/XX-zed.conf
@@ -14,7 +14,7 @@ server {
     keepalive_timeout 0;
     access_log  /data/logs/{{ environment }}/zed-access.log extended;
 
-    root /data/shop/{{ environment }}/current/static/public/Zed;
+    root /data/shop/{{ environment }}/current/public/Zed;
 
 {%- if settings.environments[environment].stores[store].zed.htpasswd_file is defined %}
     auth_basic            "Restricted Files";
