Update configuration files to reflect latest spryker

--- a/base/spryker/files/etc/nginx/spryker/yves.conf
+++ b/base/spryker/files/etc/nginx/spryker/yves.conf
@@ -5,7 +5,7 @@
 
     # Static files - allow only specified here paths
     # all other resources should be served via static host (and cached, if possible, via reverse proxy or cdn)
-    location ~ (/styles/|/images/|/scripts/|/assets/|/resources/|/fonts/|/maintenance.html|/favicon.ico|/crossdomain.xml) {
+    location ~ (/assets/|/maintenance.html|/favicon.ico|/crossdomain.xml) {
         access_log        off;
         expires           30d;
         add_header Pragma public;
