--- a/base/postgresql/files/etc/postgresql/pg_hba.conf
+++ b/base/postgresql/files/etc/postgresql/pg_hba.conf
@@ -1,4 +1,5 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
+local   all             postgres                                trust
 local   all             all                                     peer
 host    all             all             127.0.0.1/32            md5
 {%- if 'postgresql_network' in pillar.hosting %}
