--- a/base/spryker/files/etc/nginx/spryker/zed.conf
+++ b/base/spryker/files/etc/nginx/spryker/zed.conf
@@ -13,7 +13,7 @@
     send_timeout 600s;
 
     # Static files can be delivered directly
-    location ~ (/assets|/favicon.ico|/robots.txt) {
+    location ~ (/assets/|/favicon.ico|/robots.txt) {
         access_log        off;
         expires           30d;
         add_header Pragma public;
