--- a/base/elasticsearch/files/elasticsearch_instance/etc/elasticsearch/elasticsearch.yml
+++ b/base/elasticsearch/files/elasticsearch_instance/etc/elasticsearch/elasticsearch.yml
@@ -57,7 +57,7 @@ gateway.expected_nodes: {{ settings.elasticsearch.total_nodes }}
 cluster.routing.allocation.node_initial_primaries_recoveries: 4
 cluster.routing.allocation.node_concurrent_recoveries: 2
 cluster.routing.allocation.disk.watermark.low: 90%
-cluster.routing.allocation.disk.watermark.low: 95%
+cluster.routing.allocation.disk.watermark.high: 95%
 
 
 ################################### Indices ##################################
