php display_errors = on by default

--- a/base/php/files/etc/php5/php.ini
+++ b/base/php/files/etc/php5/php.ini
@@ -28,7 +28,7 @@ max_execution_time = 600
 max_input_time = 60
 memory_limit = 2048M
 error_reporting = E_ALL & ~E_DEPRECATED
-display_errors = Off
+display_errors = On
 display_startup_errors = Off
 log_errors = On
 log_errors_max_len = 8000
