This improves security of the default session handler.

--- a/base/php/files/etc/php5/php.ini
+++ b/base/php/files/etc/php5/php.ini
@@ -124,7 +124,8 @@ session.auto_start = 0
 session.cookie_lifetime = 0
 session.cookie_path = /
 session.cookie_domain =
-session.cookie_httponly =
+session.cookie_httponly = On
+session.use_strict_mode = On
 session.serialize_handler = php
 session.gc_probability = 1
 session.gc_divisor = 1000
