Add path for elasticsearch snapshots repository

--- a/base/elasticsearch/files/elasticsearch_instance/etc/elasticsearch/elasticsearch.yml
+++ b/base/elasticsearch/files/elasticsearch_instance/etc/elasticsearch/elasticsearch.yml
@@ -29,7 +29,7 @@ index.number_of_replicas: {{ settings.elasticsearch.replicas }}
 # path.work: /path/to/work
 # path.logs: /path/to/logs
 # path.plugins: /path/to/plugins
-
+path.repo: ["/data/shop/{{ environment }}/shared/elasticsearch/snapshots"]
 
 ################################### Memory ###################################
 
