Allow port-sharing envs
For development and devtest environment we are using the same app ports,
including nginx port. Those changes allow two different vhosts to run together

--- a/base/spryker/files/etc/nginx/sites-available/XX-zed.conf
+++ b/base/spryker/files/etc/nginx/sites-available/XX-zed.conf
@@ -4,8 +4,8 @@
 
 server {
     # Listener for production/staging - requires external LoadBalancer directing traffic to this port
-    listen {{ settings.environments[environment].stores[store].zed.port }} default;
-    
+    listen {{ settings.environments[environment].stores[store].zed.port }};
+
     # Listener for testing/development - one host only, doesn't require external LoadBalancer
     listen 80;
 
