--- a/base/spryker/files/etc/nginx/sites-available/static.conf
+++ b/base/spryker/files/etc/nginx/sites-available/static.conf
@@ -1,6 +1,6 @@
 server {
 
-    listen {{ settings.environments[environment].static.port }} default_server;
+    listen {{ settings.environments[environment].static.port }};
     listen 80;
 
     server_name {{ settings.environments[environment].static.hostname }};
