--- a/base/spryker/files/etc/nginx/sites-available/XX-yves.conf
+++ b/base/spryker/files/etc/nginx/sites-available/XX-yves.conf
@@ -4,8 +4,8 @@
 
 server {
     # Listener for production/staging - requires external LoadBalancer directing traffic to this port
-    listen {{ settings.environments[environment].stores[store].yves.port }} default_server sndbuf=65535 rcvbuf=16384;
-    
+    listen {{ settings.environments[environment].stores[store].yves.port }};
+
     # Listener for testing/development - one host only, doesn't require external LoadBalancer
     listen 80;
 
@@ -30,11 +30,11 @@ server {
     ### Beware of load balancer heartbeat check (/monitoring/heartbeat), it must stay not rewritten.
 
 {%- if settings.environments[environment].stores[store].yves.hostnames|count == 1 %}
-    # Allow only first (default) hostname
-    if ($host != $server_name) {
-        rewrite ^(.*)$ http://$server_name$1 permanent;
-    }
+    ## Allow only first (default) hostname
+    ## This feature is disabled as it should clarify production requirements for each site
+    #if ($host != $server_name) {
+    #    rewrite ^(.*)$ http://$server_name$1 permanent;
+    #}
 {%- endif %}
 
 }
-
