--- a/dev/mailcatcher/files/etc/systemd/system/mailcatcher.service
+++ b/dev/mailcatcher/files/etc/systemd/system/mailcatcher.service
@@ -3,7 +3,7 @@ Description=Mailcatcher
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 ExecStart=/usr/local/bin/mailcatcher --http-ip 0.0.0.0 --http-port 1080 --smtp-ip 0.0.0.0 --smtp-port 1025 -f
 TimeoutStopSec=0
 Restart=always
