ELK: set index name to kibana default

--- a/base/elk/files/etc/filebeat/filebeat.yml
+++ b/base/elk/files/etc/filebeat/filebeat.yml
@@ -22,7 +22,7 @@ output:
   elasticsearch:
     hosts: ["localhost:10005"]
     protocol: "http"
-    index: "filebeat"
+    index: "logstash"
 
 shipper:
 
