PHP upgrade to 7.1, fix module configs

--- a/base/php/files/etc/php/7.1/mods-available/opcache.ini
+++ b/base/php/files/etc/php/7.1/mods-available/opcache.ini
@@ -1,3 +1,5 @@
+; configuration for php opcache module
+; priority=10
 zend_extension=opcache.so
 {%- if salt['pillar.get']('php:enable_opcache', True) %}
 opcache.enable=1
