Upgrade NginX configs for debian 9.0

--- a/base/nginx/files/etc/nginx/nginx.conf
+++ b/base/nginx/files/etc/nginx/nginx.conf
@@ -5,6 +5,7 @@
 user www-data;
 worker_processes {{ grains.num_cpus }};
 pid /var/run/nginx.pid;
+include /etc/nginx/modules-enabled/*;
 
 events {
 	worker_connections 2000;
